<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
            
	<Button android:id="@+id/picture_selector_take_photo_btn"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/take_photo"/>
	    
	<Button android:id="@+id/picture_selector_pick_picture_btn"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/album"/>
	    
	<Button android:id="@+id/picture_selector_cancel_btn"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/cancel_menu"/>	    
    
</LinearLayout>
