<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical" >
    
    <include
        android:id="@+id/title"
        layout="@layout/my_titlebar" />
    	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="15dp"
	    android:layout_marginRight="15dp"
	    android:layout_marginTop="16dp"
	    android:gravity="center_vertical">
		<TextView android:id="@+id/TextView" 
		    android:layout_height="wrap_content" 
	    	android:layout_width="match_parent" 
	    	android:gravity="center" 
	    	android:textSize="@dimen/label_font_size" 
	    	android:text="@string/info"/>
    </LinearLayout>
			    		    		    		    		    	                               
    <LinearLayout
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="15dp"
	    android:layout_marginRight="15dp"
	    android:layout_marginTop="16dp"
	    android:gravity="center_vertical"
	    android:orientation="horizontal">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#000000"
	        android:layout_marginLeft="15dp"
	        android:layout_marginStart="15dp"
	        android:textSize="20sp"
	        android:text="@string/sex"/>
	    <TextView 
	    	android:id="@+id/sex"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_marginLeft="25dp"
	    	android:layout_marginStart="25dp"
	    	android:text="@string/boy"
	    	android:textColor="#000000"
	    	android:textSize="20sp"/>
	</LinearLayout>
    
    <LinearLayout
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="15dp"
	    android:layout_marginRight="15dp"
	    android:layout_marginTop="16dp"
	    android:gravity="center_vertical"
	    android:orientation="horizontal">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#000000"
	        android:layout_marginLeft="15dp"
	        android:layout_marginStart="15dp"
	        android:textSize="20sp"
	        android:text="@string/phone"/>
	    <TextView 
	    	android:id="@+id/phone"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_marginLeft="25dp"
	    	android:layout_marginStart="25dp"
	    	android:text="@string/number"
	    	android:textColor="#000000"
	    	android:textSize="20sp"/>
	</LinearLayout>
    <LinearLayout
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="15dp"
	    android:layout_marginRight="15dp"
	    android:layout_marginTop="16dp"
	    android:gravity="center_vertical"
	    android:orientation="horizontal">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#000000"
	        android:layout_marginLeft="15dp"
	        android:layout_marginStart="15dp"
	        android:textSize="20sp"
	        android:text="@string/mail"/>
	    <TextView 
	    	android:id="@+id/mail"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_marginLeft="25dp"
	    	android:layout_marginStart="25dp"
	    	android:text="@string/mail_address"
	    	android:textColor="#000000"
	    	android:textSize="20sp"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="15dp"
	    android:layout_marginRight="15dp"
	    android:layout_marginTop="16dp"
	    android:gravity="center_vertical"
	    android:orientation="horizontal">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#000000"
	        android:layout_marginLeft="15dp"
	        android:layout_marginStart="15dp"
	        android:textSize="20sp"
	        android:text="@string/address"/>
	    <TextView 
	    	android:id="@+id/address"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_marginLeft="25dp"
	    	android:layout_marginStart="25dp"
	    	android:text="@string/address_name"
	    	android:textColor="#000000"
	    	android:textSize="20sp"/>
	</LinearLayout>
	    	
	<Button 
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
	    android:layout_marginLeft="30dp"
	    android:layout_marginEnd="30dp"
	    android:layout_marginRight="30dp"
	    android:layout_marginTop="20dp"
        android:text="@string/revise"           
	    android:textColor="@android:color/white"
        android:background="@drawable/login_register_selector">
	</Button>
     
</LinearLayout>
