<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1">

    <EditText
        android:drawableLeft="@android:drawable/ic_menu_myplaces"
        android:drawableStart="@android:drawable/ic_menu_myplaces"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/resetpassword_edit_name"
        android:layout_alignParentTop="true"
        android:hint="@string/resetpassword_edit_name"
        android:layout_alignLeft="@+id/resetpassword_edit_pwd_new"
        android:layout_alignStart="@+id/resetpassword_edit_pwd_new"
        android:layout_alignRight="@+id/resetpassword_edit_pwd_new"
        android:layout_alignEnd="@+id/resetpassword_edit_pwd_new" />

    <EditText
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/resetpassword_edit_pwd_old"
        android:hint="@string/resetpassword_edit_pwd_old"
        android:layout_below="@+id/resetpassword_edit_name"
        android:layout_alignRight="@+id/resetpassword_edit_name"
        android:layout_alignEnd="@+id/resetpassword_edit_name"
        android:layout_alignLeft="@+id/resetpassword_edit_name"
        android:layout_alignStart="@+id/resetpassword_edit_name" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/resetpasswod_btn_cancel"
        android:textSize="20sp"
        android:onClick="not_to_reset"
        android:textColor="@android:color/white"
        android:background="@drawable/login_register_selector"
        android:layout_below="@+id/resetpassword_btn_sure"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/resetpassword_edit_pwd_new"
        android:layout_below="@+id/resetpassword_edit_pwd_old"
        android:layout_centerHorizontal="true"
        android:hint="@string/resetpassword_edit_pwd_new"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/resetpassword_btn_sure"
        android:textSize="20sp"
        android:onClick="sure_to_reset"
        android:textColor="@android:color/white"
        android:background="@drawable/login_register_selector"
        android:layout_marginTop="92dp"
        android:layout_below="@+id/resetpassword_edit_pwd_new"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/resetpassword_edit_pwd_check"
        android:hint="@string/resetpassword_edit_pwd_check"
        android:layout_below="@+id/resetpassword_edit_pwd_new"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
