<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include
        android:id="@+id/title"
        layout="@layout/my_titlebar" />
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="25dp"
        android:paddingStart="25dp"
        android:paddingRight="25dp"
        android:paddingEnd="25dp"
        android:paddingTop="15dp" >

        <TextView
            android:id="@+id/menu_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_setting"
            android:textSize="@dimen/label_font_size"
            android:textColor="@color/forestgreen" />
    </LinearLayout>

    <com.example.fileshare.CornerListView
        android:id="@+id/list1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        
        android:cacheColorHint="@null"/>
    
     <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="25dp"
        android:paddingStart="25dp"
        android:paddingRight="25dp"
        android:paddingEnd="25dp"
        android:paddingTop="15dp" >

        <TextView
            android:id="@+id/menu_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_setting"
            android:textSize="@dimen/label_font_size"
            android:textColor="@color/forestgreen" />
     </LinearLayout>

    <com.example.fileshare.CornerListView
        android:id="@+id/list2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        
        android:cacheColorHint="@null"/>
    
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp" >

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
	        android:layout_marginLeft="30dp"
	        android:layout_marginEnd="30dp"
	        android:layout_marginRight="30dp"
            android:text="@string/logout"           
	        android:textColor="@android:color/white"
            android:background="@drawable/login_register_selector" />
     </LinearLayout>

</LinearLayout>